--- a/src/FluxTableElement.css
+++ b/src/FluxTableElement.css
@@ -29,55 +29,64 @@ table {
 }
 
 table, thead, tbody, tfoot, tr, th, td {
-    border: 1px solid var(--flux-table-border-color);
+    border: var(--flux-table-border-width) var(--flux-table-border-style) var(--flux-table-border-color);
     border-collapse: collapse;
 }
 
-th, td {
-    height: auto;
-    padding: 10px;
-    text-align: left;
-    vertical-align: top;
-    width: auto;
-}
-
-thead {
-    background-color: var(--flux-table-header-row-background-color);
-    color: var(--flux-table-header-row-foreground-color);
-}
-
 th {
+    background-color: var(--flux-table-header-row-background-color);
     border-right: none;
-    font-weight: bold;
+    color: var(--flux-table-header-row-foreground-color);
+    font-size: var(--flux-table-header-row-font-size);
+    font-weight: var(--flux-table-header-row-font-weight);
+    padding: var(--flux-table-header-row-padding);
+    text-align: var(--flux-table-header-row-text-align);
+    vertical-align: var(--flux-table-header-row-vertical-align);
 }
 
 th:not(:first-child) {
-    border-left-color: var(--flux-table-header-row-border-color);
+    border-left: var(--flux-table-header-row-border-width) var(--flux-table-header-row-border-style) var(--flux-table-header-row-border-color);
 }
 
-tbody tr:nth-child(even) {
+tr:nth-child(even) td {
     background-color: var(--flux-table-even-row-background-color);
     color: var(--flux-table-even-row-foreground-color);
+    font-size: var(--flux-table-even-row-font-size);
+    font-weight: var(--flux-table-even-row-font-weight);
+    padding: var(--flux-table-even-row-padding);
+    text-align: var(--flux-table-even-row-text-align);
+    vertical-align: var(--flux-table-even-row-vertical-align);
 }
 
 tr:nth-child(even) td:not(:last-child) {
-    border-right-color: var(--flux-table-even-row-border-color);
+    border-right: var(--flux-table-even-row-border-width) var(--flux-table-even-row-border-style) var(--flux-table-even-row-border-color);
 }
 
-tbody tr:nth-child(odd) {
+tr:nth-child(odd) td {
     background-color: var(--flux-table-odd-row-background-color);
     color: var(--flux-table-odd-row-foreground-color);
+    font-size: var(--flux-table-odd-row-font-size);
+    font-weight: var(--flux-table-odd-row-font-weight);
+    padding: var(--flux-table-odd-row-padding);
+    text-align: var(--flux-table-odd-row-text-align);
+    vertical-align: var(--flux-table-odd-row-vertical-align);
 }
 
 tr:nth-child(odd) td:not(:last-child) {
-    border-right-color: var(--flux-table-odd-row-border-color);
+    border-right: var(--flux-table-odd-row-border-width) var(--flux-table-odd-row-border-style) var(--flux-table-odd-row-border-color);
 }
 
-td[colspan] {
-    text-align: center;
+tr td[colspan] {
+    background-color: var(--flux-table-no-rows-row-background-color);
+    color: var(--flux-table-no-rows-row-foreground-color);
+    font-size: var(--flux-table-no-rows-row-font-size);
+    font-weight: var(--flux-table-no-rows-row-font-weight);
+    padding: var(--flux-table-no-rows-row-padding);
+    text-align: var(--flux-table-no-rows-row-text-align);
+    vertical-align: var(--flux-table-no-rows-row-vertical-align);
 }
 
-.row_actions_cell {
+[data-column_key="actions"] {
     width: 0;
 }
 
@@ -86,8 +95,6 @@ td[colspan] {
     flex-direction: row;
     flex-wrap: nowrap;
     gap: 10px;
-    height: auto;
-    width: auto;
 }
 
 button {
